--- a/catalog/manifest.yml
+++ b/catalog/manifest.yml
@@ -2,9 +2,9 @@ sourcecode:
   type: git
   location:
     origin: https://github.com/xtruan/FlipBIP.git
-    commit_sha: 3cb8313f13b95e12ae1a4e5ea9d679a058b33aac
+    commit_sha: a9b4eadaa2ad775ead09cec8eb0987704640acc2
 description: "Cryptocurrency wallet with support for BTC, ETH, DOGE, and ZEC (t-addr)"
-changelog: "v1.14.0 - Confirmation before wallet regeneration"
+changelog: "v1.15 - Update to support new FW"
 author: "@xtruan"
 screenshots:
   - "./catalog/startscreen.png"
