fix: remove ref to u8g2

--- a/.github/workflows/ufbt_build.yaml
+++ b/.github/workflows/ufbt_build.yaml
@@ -1,11 +1,11 @@
 name: "uFBT Build"
 on:
   workflow_dispatch:
-  # push:
-  #   branches: 
-  #     - main
-  #     - develop
-  # pull_request:
+  push:
+    branches: 
+      - main
+      - develop
+  pull_request:
   # schedule: 
     # do a build every day
     # - cron: "1 1 * * *"
