vscode: disabled auto header insertion for clangd

--- a/.vscode/example/settings.json
+++ b/.vscode/example/settings.json
@@ -19,6 +19,7 @@
     "clangd.arguments": [
         // We might be able to tighten this a bit more to only include the correct toolchain.
         "--query-driver=**",
-        "--compile-commands-dir=${workspaceFolder}/build/latest"
+        "--compile-commands-dir=${workspaceFolder}/build/latest",
+        "--header-insertion=never"
     ]
 }
