--- a/.vscode/example/settings.json
+++ b/.vscode/example/settings.json
@@ -20,6 +20,7 @@
         // We might be able to tighten this a bit more to only include the correct toolchain.
         "--query-driver=**",
         "--compile-commands-dir=${workspaceFolder}/build/latest",
+        "--clang-tidy",
         "--header-insertion=never"
     ]
 }
