feat: initial settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "flipenigma_startscreen.h": "c",
+        "enigma.h": "c"
     }
 }
