--- a/.gitmodules
+++ b/.gitmodules
@@ -43,4 +43,4 @@
 	url = https://github.com/jothepro/doxygen-awesome-css.git
 [submodule "lib/tlsf"]
 	path = lib/tlsf
-	url = https://github.com/espressif/tlsf
+	url = https://github.com/flipperdevices/tlsf.git
