fix: more screenshots, clean up stack

--- a/catalog/manifest.yml
+++ b/catalog/manifest.yml
@@ -8,9 +8,9 @@ changelog: "v1.0 - Initial release"
 author: "@xtruan"
 screenshots:
   - "./catalog/startscreen.png"
-  - "./catalog/menu.png"
-  - "./catalog/rotor.png"
-  - "./catalog/message.png"
-  - "./catalog/ciphertext.png"
-  - "./catalog/plugboard1.png"
+  - "./catalog/menu1.png"
+  - "./catalog/rotor11.png"
+  - "./catalog/plaintext1.png"
+  - "./catalog/ciphertext1.png"
+  - "./catalog/plugtext2.png"
   - "./catalog/plugboard2.png"
