--- a/.pvsconfig
+++ b/.pvsconfig
@@ -3,6 +3,7 @@
 //-V:M_EACH:1048,1044
 //-V:ARRAY_DEF:760,747,568,776,729,712,654,1103
 //-V:LIST_DEF:760,747,568,712,729,654,776,1103
+//-V:LIST_DUAL_PUSH_DEF:524,760,774
 //-V:BPTREE_DEF2:779,1086,557,773,512
 //-V:DICT_DEF2:779,524,776,760,1044,1001,729,590,568,747,685,1103
 //-V:ALGO_DEF:1048,747,1044
