--- a/.github/workflows/updater_test.yml
+++ b/.github/workflows/updater_test.yml
@@ -1,8 +1,6 @@
 name: 'Updater test'
-
 on:
   pull_request:
-
 env:
   TARGETS: f7
   DEFAULT_TARGET: f7
@@ -35,7 +33,7 @@ jobs:
         run: |
           source scripts/toolchain/fbtenv.sh
           ./fbt flash_usb_full PORT=${{steps.device.outputs.flipper}} FORCE=1
-          python3 scripts/testing/await_flipper.py ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
 
       - name: 'Validating updater'
         id: second_full_flash
@@ -44,7 +42,7 @@ jobs:
         run: |
           source scripts/toolchain/fbtenv.sh
           ./fbt flash_usb PORT=${{steps.device.outputs.flipper}} FORCE=1
-          python3 scripts/testing/await_flipper.py ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
 
       - name: 'Get last release tag'
         id: release_tag
@@ -71,5 +69,5 @@ jobs:
         if: failure()
         run: |
           source scripts/toolchain/fbtenv.sh
-          python3 scripts/testing/await_flipper.py ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
           python3 scripts/storage.py -p ${{steps.device.outputs.flipper}} format_ext
