--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -39,7 +39,7 @@ jobs:
         timeout-minutes: 5
         run: |
           source scripts/toolchain/fbtenv.sh
-          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py -p=${{steps.device.outputs.flipper}} -t=120 await_flipper 
           python3 scripts/storage.py -p ${{steps.device.outputs.flipper}} format_ext
 
       - name: 'Copy assets and unit data, reboot and wait for flipper'
@@ -48,11 +48,11 @@ jobs:
         timeout-minutes: 7
         run: |
           source scripts/toolchain/fbtenv.sh
-          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py -p=${{steps.device.outputs.flipper}} -t=15 await_flipper 
           rm -rf build/latest/resources/dolphin
           python3 scripts/storage.py -p ${{steps.device.outputs.flipper}} -f send build/latest/resources /ext
           python3 scripts/power.py -p ${{steps.device.outputs.flipper}} reboot
-          python3 scripts/testops.py await_flipper -p ${{steps.device.outputs.flipper}}
+          python3 scripts/testops.py -p=${{steps.device.outputs.flipper}} -t=15 await_flipper 
 
       - name: 'Run units and validate results'
         id: run_units
