--- a/.github/workflows/updater_test.yml
+++ b/.github/workflows/updater_test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: 'Get flipper from device manager (mock)'
         id: device
         run: |
-          echo "flipper=Rekigyn" >> $GITHUB_OUTPUT
+          echo "flipper=auto" >> $GITHUB_OUTPUT
           echo "stlink=0F020D026415303030303032" >> $GITHUB_OUTPUT
 
       - name: 'Flashing target firmware'
