--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -50,7 +50,7 @@ jobs:
           source scripts/toolchain/fbtenv.sh
           python3 scripts/testops.py -p=${{steps.device.outputs.flipper}} -t=15 await_flipper 
           rm -rf build/latest/resources/dolphin
-          python3 scripts/storage.py -d -p ${{steps.device.outputs.flipper}} -f send build/latest/resources /ext
+          python3 scripts/storage.py -p ${{steps.device.outputs.flipper}} -f send build/latest/resources /ext
           python3 scripts/power.py -p ${{steps.device.outputs.flipper}} reboot
           python3 scripts/testops.py -p=${{steps.device.outputs.flipper}} -t=15 await_flipper 
 
