refactor: rename to softio

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -43,7 +43,7 @@ libs = env.BuildModules(
         "ble_profile",
         "bit_lib",
         "datetime",
-        "softspi",
+        "softio",
     ],
 )
 
