empty_screen, docs, typing fix-ups

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         ]
     },
     "include": [
-        "applications/system/js_app/examples/apps/Scripts"
+        "./applications/system/js_app/examples/apps/Scripts",
+        "./applications/debug/unit_tests/resources/unit_tests/js",
+        "./applications/system/js_app/types/global.d.ts",
     ]
 }
