Actualizar CMakeLists.txt

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -1,2 +1,1 @@
-# Archivo de configuración para la aplicación NFC
-add_application(nfc_reader "nfc_reader.c" ICON "nfc")
+add_application(nfc_reader "NFC_reader.c" ICON "nfc")
