--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
         "checkJs": true,
         "module": "CommonJS",
         "typeRoots": [
-            "./applications/system/js_app/types"
+            "./js/fz-sdk/"
         ],
         "noLib": true,
     },
     "include": [
         "./applications/system/js_app/examples/apps/Scripts",
         "./applications/debug/unit_tests/resources/unit_tests/js",
-        "./applications/system/js_app/types/global.d.ts",
+        "./js/fz-sdk/global.d.ts",
     ]
 }
