--- a/applications/system/js_app/packages/fz-sdk/package.json
+++ b/applications/system/js_app/packages/fz-sdk/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/flipperdevices/flipperzero-firmware.git",
-    "directory": "js/fz-sdk"
+    "directory": "applications/system/js_app/packages/fz-sdk"
   },
   "type": "module",
   "devDependencies": {
