--- a/applications/system/js_app/packages/fz-sdk/package.json
+++ b/applications/system/js_app/packages/fz-sdk/package.json
@@ -18,14 +18,12 @@
   "devDependencies": {
     "esbuild": "^0.24.0",
     "esbuild-plugin-tsc": "^0.4.0",
+    "json5": "^2.2.3",
     "typedoc": "^0.26.10",
     "typedoc-material-theme": "^1.1.0"
   },
   "dependencies": {
     "prompts": "^2.4.2",
     "serialport": "^12.0.0"
-  },
-  "scripts": {
-    "build-docs": "pnpm typedoc"
   }
 }
